[gd_scene load_steps=4 format=3 uid="uid://cwesg83dp878l"]

[ext_resource type="Script" uid="uid://flwk0dy70807" path="res://game-over/game-over.gd" id="1_l46u3"]
[ext_resource type="Texture2D" uid="uid://dwu21fcr83m4l" path="res://assets/background.png" id="1_vgqx3"]
[ext_resource type="Theme" uid="uid://b3sbtlrh3rexf" path="res://game-over/game-over.tres" id="2_cg6m5"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l46u3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -152.0
offset_right = 872.0
offset_bottom = 1276.0
texture = ExtResource("1_vgqx3")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.5
offset_top = -50.5
offset_right = 284.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cg6m5")
theme_override_font_sizes/font_size = 48
text = "GAME OVER!
QUER JOGAR NOVAMENTE?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 694.0
offset_right = 518.0
offset_bottom = 751.0

[node name="YesButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cg6m5")
theme_override_font_sizes/font_size = 48
text = "SIM"

[node name="NoButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cg6m5")
theme_override_font_sizes/font_size = 48
text = "NÃƒo"

[node name="ExitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_cg6m5")
theme_override_font_sizes/font_size = 48
text = "SAIR"

[connection signal="pressed" from="HBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="HBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
